--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -7,7 +7,7 @@
         
         
         <script src="resources/qunit.js"></script>
-        <script src="../DateExtension-min.js"></script>
+        <script src="../DateExtension.js"></script>
     </head>
     <body>
         <div id="qunit"></div>
